--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,22 @@
-/* You can add global styles to this file, and also import other style files */
+/*Bootstrap imports*/
+
+//Block
+@import "~bootstrap/scss/functions";
+@import "styles/variables";
+@import "~bootstrap/scss/variables";
+@import "~bootstrap/scss/mixins";
+
+@import "~bootstrap/scss/maps";
+@import "~bootstrap/scss/root";
+@import "~bootstrap/scss/reboot";
+
+@import "~bootstrap/scss/containers"; // Add .container and .container-fluid classes
+@import "~bootstrap/scss/grid"; // Add the grid system
+@import "~bootstrap/scss/utilities"; // Configures the utility classes that should be generated
+@import "~bootstrap/scss/utilities/api"; // Generates the actual utility classes
+
+@import "styles/reset";
+/**/
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
